Changed volunteer work tense to past tense

--- a/index.html
+++ b/index.html
@@ -395,8 +395,8 @@
               </div>
               <div class="android-drawer-separator"></div>
                 <ul class="mdl-typography--font-light mdl-typography--subhead custom-bulleted-list">
-                  <li>Tutors 30-40 newly arrived immigrants in Sir Charles Tupper Secondary School</li>
-                  <li>Assists immigrants in adapting to a new environment by serving as a model and brother</li>
+                  <li>Tutored 30-40 newly arrived immigrants in Sir Charles Tupper Secondary School</li>
+                  <li>Assisted immigrants in adapting to a new environment by serving as a model and brother</li>
                 </ul>
             </div>
             <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
