Added more skills and work

--- a/index.html
+++ b/index.html
@@ -133,14 +133,15 @@
                 <h4 class="mdl-card__title-text">Computers</h4>
               </div>
                 <ul class="mdl-typography--font-light mdl-typography--subhead custom-list">
-                  <li>C/C++</li>
+                  <li>C/C++/C#</li>
                   <li>Python</li>
+                  <li>Embedded Programming</li>
+                  <li>Concurrent Programming</li>
                   <li>Shell Scripting</li>
-                  <li>MATLAB/R</li>
+                  <li>MATLAB/Simulink/R</li>
                   <li>VBA</li>
-                  <li>Java</li>
+                  <li>Unified Modeling Language (UML)</li>
                   <li>FPGA (VHDL)</li>
-                  <li>HTML/CSS/Javascript</li>
                   <li>Windows/Mac OSX/Linux/Unix</li>
                 </ul>
             </div>
@@ -152,10 +153,12 @@
                  <h4 class="mdl-card__title-text">Robotics</h4>
               </div>
               <ul class="mdl-typography--font-light mdl-typography--subhead custom-list">
-                  <li>Robotics Operating System (ROS)</li>
-                  <li>Mapping</li>
+                  <li>Mapping and Localization</li>
                   <li>Computer Vision (OpenCV)</li>
-                  <li>Artificial Intelligence (Pathfinding)</li>
+                  <li>Machine Learning</li>
+                  <li>Pathfinding</li>
+                  <li>Forward/Inverse Kinematics</li>
+                  <li>Robotics Operating System (ROS)</li>
               </ul>
             </div>
             <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
@@ -166,13 +169,16 @@
                  <h4 class="mdl-card__title-text">Electrical</h4>
               </div>
               <ul class="mdl-typography--font-light mdl-typography--subhead custom-list">
+                  <li>Sensors</li>
+                  <li>Control Theory and Design</li>
+                  <li>Motor Control</li>
+                  <li>Instrumentation</li>
                   <li>Microcontrollers/ Microcomputers</li>
                   <li>Oscilloscope</li>
-                  <li>Multimeter</li>
                   <li>Breadboard Prototyping</li>
+                  <li>Multimeter</li>
                   <li>Soldering</li>
                   <li>Semiconductors</li>
-                  <li>Sensors</li>
               </ul>
             </div>
             <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
@@ -183,11 +189,12 @@
                  <h4 class="mdl-card__title-text">Mechanical</h4>
               </div>
               <ul class="mdl-typography--font-light mdl-typography--subhead custom-list">
+                  <li>3D Printer Prototyping</li>
+                  <li>Analytical Modelling</li>
                   <li>AutoCAD/SolidWorks/ Siemens NX (Unigraphics)/Blender</li>
                   <li>Machining</li>
                   <li>Hand Tools</li>
                   <li>Drafting</li>
-                  <li>Analytical Modelling</li>
               </ul>
             </div>
           </div>
@@ -206,7 +213,7 @@
         <div class="projects-snowbots-section mdl-typography--text-center">
           <div class="mdl-typography--font-thin mdl-typography--display-2
            projects-snowbots-title">UBC Snowbots Autonomous Vehicle Team</div>
-          <div class="mdl-typography--headline mdl-typography--font-thin projects-snowbots-subtitle">September 2014 - current<br>Student Team Project</div>
+          <div class="mdl-typography--headline mdl-typography--font-thin projects-snowbots-subtitle">September 2014 - January 2016<br>Student Team Project</div>
         </div>
         <div class="project-blurb">
           <div class="mdl-typography--font-thin mdl-typography--headline-color-contrast">The future is autonomous...</div>
@@ -320,6 +327,23 @@
         <div class="android-more-section custom-industry-height">
           <div class="android-section-title mdl-typography--display-2-color-contrast mdl-typography--font-thin">Industry</div>
           <div class="android-card-container mdl-grid">
+            <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
+              <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">Nestlé Waters</h4>
+              </div>
+              <div class="mdl-card__title work-subtitle">
+                <h4 class="mdl-card__subtitle-text">
+                  <i>Capstone Project Sensor Specialist</i><br>
+                September 2015 - April 2016
+                </h4>
+              </div>
+              <div class="android-drawer-separator"></div>
+                <ul class="mdl-typography--font-light mdl-typography--subhead custom-bulleted-list">
+                  <li>Collaborated with a team of four to build a device that improves the quality assurance of the bottling facility</li>
+                  <li>Coordinated with suppliers to select and configure particular industrial-grade sensors appropriate for the project's goals</li>
+                  <li>Prototyped microcontroller circuit and code to implement desired functionality one month before the deadline</li>
+                </ul>
+            </div>
             <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
               <div class="mdl-card__title">
                 <h4 class="mdl-card__title-text">Canada's Michael Smith Genome Science Centre, BC Cancer Agency</h4>
@@ -522,7 +546,7 @@
             </div>
           </div>
         </div>
-        <div class=" custom-interests-height">
+        <div class="android-more-section custom-interests-height">
           <div class="android-card-container mdl-grid">
             <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
               <div class="mdl-card__title">
