Reordered categories and changed header

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
               <a href="#skills">
                 <button class="mdl-button mdl-js-button mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect">Skills</button>
               </a>
-              <a href="#projects">
-                <button class="mdl-button mdl-js-button mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect">Projects</button>
-              </a>
               <a href="#work">
                 <button class="mdl-button mdl-js-button mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect">Work</button>
                 </a>
+              <a href="#projects">
+                <button class="mdl-button mdl-js-button mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect">Projects</button>
+              </a>
               <a href="#academics">
                 <button class="mdl-button mdl-js-button mdl-navigation__link mdl-typography--text-uppercase mdl-js-ripple-effect">Academics</button>
                 </a>
@@ -86,12 +86,12 @@
         </span>
         <nav class="mdl-navigation">
           <a href="#skills"><span class="mdl-navigation__link">Skills</span></a>
-          <div class="android-drawer-separator"></div>
-          <a href="#projects"><span class="mdl-navigation__link">Projects</span></a>
           <div class="android-drawer-separator"></div>  
           <a href="#work"><span class="mdl-navigation__link">Work</span></a>
           <a class="mdl-navigation__link" href="#industry">Industry</a>
           <a class="mdl-navigation__link" href="#volunteer">Volunteer</a>
+          <div class="android-drawer-separator"></div>
+          <a href="#projects"><span class="mdl-navigation__link">Projects</span></a>
           <div class="android-drawer-separator"></div>
           <a  href="#academics"><span class="mdl-navigation__link">Academics</span></a>
           <a class="mdl-navigation__link" href="#schools">Schools</a>
@@ -112,9 +112,9 @@
           </div>
           <div class="android-font custom-sub-slogan">Bachelor of Applied Science</div>
           <div class="android-font custom-sub-slogan">Mechanical Engineering</div>
-          <div class="android-font custom-sub-slogan">Mechatronics Track</div>
+          <div class="android-font custom-sub-slogan">Mechatronics Specialization</div>
           <div class="android-font custom-sub-slogan">Minor in Commerce</div>
-          <div class="android-font custom-sub-slogan">mechatronics. robotics. AI. IoT. </div>
+          <div class="android-font custom-sub-slogan">mechatronics. embedded. sensors. HCI </div>
             <a href="#skills">
               <button class="android-fab custom-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
                 <i class="material-icons">expand_more</i>
@@ -196,6 +196,97 @@
                   <li>Hand Tools</li>
                   <li>Drafting</li>
               </ul>
+            </div>
+          </div>
+        </div>
+        <a id="work"></a>
+        <div class="android-wear-section">
+          <div class="android-wear-band">
+            <div class="android-wear-band-text">
+              <div class="mdl-typography--display-2 mdl-typography--font-thin"><br>Work Experience</div>
+              <p class="mdl-typography--headline mdl-typography--font-thin">
+                A collection of my experiences both in industry and volunteer work
+              </p>
+            </div>
+          </div>
+        </div>
+        <a id="industry"></a>
+        <div class="android-more-section custom-industry-height">
+          <div class="android-section-title mdl-typography--display-2-color-contrast mdl-typography--font-thin">Industry</div>
+          <div class="android-card-container mdl-grid">
+            <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
+              <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">Nestlé Waters</h4>
+              </div>
+              <div class="mdl-card__title work-subtitle">
+                <h4 class="mdl-card__subtitle-text">
+                  <i>Capstone Project Sensor Specialist</i><br>
+                September 2015 - April 2016
+                </h4>
+              </div>
+              <div class="android-drawer-separator"></div>
+                <ul class="mdl-typography--font-light mdl-typography--subhead custom-bulleted-list">
+                  <li>Collaborated with a team of four to build a device that improves the quality assurance of the bottling facility</li>
+                  <li>Coordinated with suppliers to select and configure particular industrial-grade sensors appropriate for the project's goals</li>
+                  <li>Prototyped microcontroller circuit and code to implement desired functionality one month before the deadline</li>
+                </ul>
+            </div>
+            <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
+              <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">Canada's Michael Smith Genome Science Centre, BC Cancer Agency</h4>
+              </div>
+              <div class="mdl-card__title work-subtitle">
+                <h4 class="mdl-card__subtitle-text">
+                  <i>Bioinformatics Co-op</i><br>
+                January 2015 - August 2015
+                </h4>
+              </div>
+              <div class="android-drawer-separator"></div>
+                <ul class="mdl-typography--font-light mdl-typography--subhead custom-bulleted-list">
+                  <li>Wrote over 23,000 lines of Python scripts, C++ code and shell scripts</li>
+                  <li>Actively contributed to a private GitHub repository</li>
+                  <li>Regularly investigated the sensitivity, specificity and scaling of different algorithms on datasets as large as the 20 Gb white spruce</li>
+                  <li>Created jobs for the processing of high performance computers</li>
+                  <li>Presented findings through data visualization in weekly small roundtable meetings and in quarterly Bioinformatics Technology Lab showcases.</li>
+                </ul>
+            </div>
+            <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
+              <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">Automotive Fuel Cell Cooperation</h4>
+              </div>
+              <div class="mdl-card__title work-subtitle">
+                <h4 class="mdl-card__subtitle-text">
+                  <i>Unit Cell and Stack Architecture Co-op Student</i><br>
+                May 2014 - August 2014
+                </h4>
+              </div>
+              <div class="android-drawer-separator"></div>
+                <ul class="mdl-typography--font-light mdl-typography--subhead custom-bulleted-list">
+                  <li>Actively participated in a four-day planning workshop with Daimler, Ford, Nissan and NuCellSys engineers</li>
+                  <li>Effectively coordinated with the different validation and testing teams regarding the current major project of AFCC</li>
+                  <li>Interpreted and analyzed data from tests through coding hundreds of lines per week using VBA</li>
+                  <li>Participated and presented findings in front of a team of engineers and scientists once or twice a week</li>
+                  <li>Constructed mathematical models using MATLAB to validate theories on observed phenomena</li>
+                </ul>
+            </div>
+            <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
+              <div class="mdl-card__title">
+                <h4 class="mdl-card__title-text">ERCO Worldwide</h4>
+              </div>
+              <div class="mdl-card__title work-subtitle">
+                <h4 class="mdl-card__subtitle-text">
+                  <i>Mechanical Co-op Student</i><br>
+                September 2013 – December 2013
+                </h4>
+              </div>
+              <div class="android-drawer-separator"></div>
+                <ul class="mdl-typography--font-light mdl-typography--subhead custom-bulleted-list">
+                  <li>Efficiently managed dozens of work orders in the sodium chlorate plant</li>
+                  <li>Facilitated the tasks for the plant maintenance shutdown</li>
+                  <li>Wrote capital requests and specifications for new equipment</li>
+                  <li>Created dozens of technical drawings such as loop diagrams and part designs using AutoCAD</li>
+                  <li>Oversaw weekly meetings with the members of different trades present in the maintenance team</li>
+                </ul>
             </div>
           </div>
         </div>
@@ -310,97 +401,6 @@
           <div class="mdl-typography--font-thin mdl-typography--headline-color-contrast">First foray into engineering...</div>
           <div class="project-blurb-content mdl-typography--body-2-color-contrast mdl-typography--font-thin">
           In this project, I participated in the mechanical team that created a fuel-efficient vehicle that competed in the Shell Eco-Marathon Americas. In particular, my team assessed 10 different engine starter solutions and did detailed design (CAD) of the decided mechanism. I was also provided an opportunity to tune, dismantle and rebuild the engine of the vehicle.
-          </div>
-        </div>
-        <a id="work"></a>
-        <div class="android-wear-section">
-          <div class="android-wear-band">
-            <div class="android-wear-band-text">
-              <div class="mdl-typography--display-2 mdl-typography--font-thin"><br>Work Experience</div>
-              <p class="mdl-typography--headline mdl-typography--font-thin">
-                A collection of my experiences both in industry and volunteer work
-              </p>
-            </div>
-          </div>
-        </div>
-        <a id="industry"></a>
-        <div class="android-more-section custom-industry-height">
-          <div class="android-section-title mdl-typography--display-2-color-contrast mdl-typography--font-thin">Industry</div>
-          <div class="android-card-container mdl-grid">
-            <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
-              <div class="mdl-card__title">
-                <h4 class="mdl-card__title-text">Nestlé Waters</h4>
-              </div>
-              <div class="mdl-card__title work-subtitle">
-                <h4 class="mdl-card__subtitle-text">
-                  <i>Capstone Project Sensor Specialist</i><br>
-                September 2015 - April 2016
-                </h4>
-              </div>
-              <div class="android-drawer-separator"></div>
-                <ul class="mdl-typography--font-light mdl-typography--subhead custom-bulleted-list">
-                  <li>Collaborated with a team of four to build a device that improves the quality assurance of the bottling facility</li>
-                  <li>Coordinated with suppliers to select and configure particular industrial-grade sensors appropriate for the project's goals</li>
-                  <li>Prototyped microcontroller circuit and code to implement desired functionality one month before the deadline</li>
-                </ul>
-            </div>
-            <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
-              <div class="mdl-card__title">
-                <h4 class="mdl-card__title-text">Canada's Michael Smith Genome Science Centre, BC Cancer Agency</h4>
-              </div>
-              <div class="mdl-card__title work-subtitle">
-                <h4 class="mdl-card__subtitle-text">
-                  <i>Bioinformatics Co-op</i><br>
-                January 2015 - August 2015
-                </h4>
-              </div>
-              <div class="android-drawer-separator"></div>
-                <ul class="mdl-typography--font-light mdl-typography--subhead custom-bulleted-list">
-                  <li>Wrote over 23,000 lines of Python scripts, C++ code and shell scripts</li>
-                  <li>Actively contributed to a private GitHub repository</li>
-                  <li>Regularly investigated the sensitivity, specificity and scaling of different algorithms on datasets as large as the 20 Gb white spruce</li>
-                  <li>Created jobs for the processing of high performance computers</li>
-                  <li>Presented findings through data visualization in weekly small roundtable meetings and in quarterly Bioinformatics Technology Lab showcases.</li>
-                </ul>
-            </div>
-            <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
-              <div class="mdl-card__title">
-                <h4 class="mdl-card__title-text">Automotive Fuel Cell Cooperation</h4>
-              </div>
-              <div class="mdl-card__title work-subtitle">
-                <h4 class="mdl-card__subtitle-text">
-                  <i>Unit Cell and Stack Architecture Co-op Student</i><br>
-                May 2014 - August 2014
-                </h4>
-              </div>
-              <div class="android-drawer-separator"></div>
-                <ul class="mdl-typography--font-light mdl-typography--subhead custom-bulleted-list">
-                  <li>Actively participated in a four-day planning workshop with Daimler, Ford, Nissan and NuCellSys engineers</li>
-                  <li>Effectively coordinated with the different validation and testing teams regarding the current major project of AFCC</li>
-                  <li>Interpreted and analyzed data from tests through coding hundreds of lines per week using VBA</li>
-                  <li>Participated and presented findings in front of a team of engineers and scientists once or twice a week</li>
-                  <li>Constructed mathematical models using MATLAB to validate theories on observed phenomena</li>
-                </ul>
-            </div>
-            <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-card mdl-shadow--3dp">
-              <div class="mdl-card__title">
-                <h4 class="mdl-card__title-text">ERCO Worldwide</h4>
-              </div>
-              <div class="mdl-card__title work-subtitle">
-                <h4 class="mdl-card__subtitle-text">
-                  <i>Mechanical Co-op Student</i><br>
-                September 2013 – December 2013
-                </h4>
-              </div>
-              <div class="android-drawer-separator"></div>
-                <ul class="mdl-typography--font-light mdl-typography--subhead custom-bulleted-list">
-                  <li>Efficiently managed dozens of work orders in the sodium chlorate plant</li>
-                  <li>Facilitated the tasks for the plant maintenance shutdown</li>
-                  <li>Wrote capital requests and specifications for new equipment</li>
-                  <li>Created dozens of technical drawings such as loop diagrams and part designs using AutoCAD</li>
-                  <li>Oversaw weekly meetings with the members of different trades present in the maintenance team</li>
-                </ul>
-            </div>
           </div>
         </div>
         <a id="volunteer"></a>
