--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
                 <h4 class="mdl-card__title-text">Computers</h4>
               </div>
                 <ul class="mdl-typography--font-light mdl-typography--subhead custom-list">
-                  <li>C/C++/C#</li>
-                  <li>Python</li>
+                  <li>C/C++/C#/Python</li>
                   <li>Embedded Programming</li>
                   <li>Concurrent Programming</li>
                   <li>Shell Scripting</li>
@@ -299,6 +298,50 @@
                 A technical showcase of my personal, team and course projects.
               </p>
             </div>
+          </div>
+        </div>
+        <div class="projects-laserscanner-section mdl-typography--text-center">
+          <div class="mdl-typography--font-thin mdl-typography--display-2
+           projects-laserscanner-title">3D Laser<br>Scanner</div>
+          <div class="mdl-typography--headline mdl-typography--font-thin projects-laserscanner-subtitle">March 2016<br>Course Project</div>
+        </div>
+        <div class="project-blurb">
+          <div class="mdl-typography--font-thin mdl-typography--headline-color-contrast">Microcontrollers, Motors, GUIs and Project Development on Overdrive</div>
+          <div class="project-blurb-content mdl-typography--body-2-color-contrast mdl-typography--font-thin">
+          This project involved writing a project proposal and actually executing it through the use of embedded programming, GUI development, mechanical design and circuit design patterns. By the end of it, the room scanner was capable of scanning objects in a room through a mixture of a line laser, webcam and a stepper motor. I genuinely enjoyed this project for two reasons: its relation to my interests and its similarity to actual industry work. For one, microcontrollers, sensors and programming in general were always very engrossing. Furthermore, my newly acquired computer vision skills at the time reflect the ever present need to learn of an engineer. In such a short time span, my partner and I accomplished so much and had so much fun in the process.
+          </div>
+        </div>
+        <div class="projects-accelerometer-section mdl-typography--text-center">
+          <div class="mdl-typography--font-thin mdl-typography--display-2
+           projects-accelerometer-title">Accelerometer and Encoder Data Acquisition</div>
+          <div class="mdl-typography--headline mdl-typography--font-thin projects-accelerometer-subtitle">January 2016<br>Course Project</div>
+        </div>
+        <div class="project-blurb">
+          <div class="mdl-typography--font-thin mdl-typography--headline-color-contrast">Bridging the gap between theory and application...</div>
+          <div class="project-blurb-content mdl-typography--body-2-color-contrast mdl-typography--font-thin">
+          These projects were a culmination of the different classes we were taking at the time such as microcontroller programming, control theory, controller design, user interfaces and sensors. It packed all these in simple mini-projects such as a Nintendo Wii-like gesture fighting game and a proportional positional DC motor controller. And with these, all the theory suddenly made sense.
+          </div>
+        </div>
+        <div class="projects-linetrace-section mdl-typography--text-center">
+          <div class="mdl-typography--font-thin mdl-typography--display-2
+           projects-linetrace-title">Trajectory Tracing Robot Controller</div>
+          <div class="mdl-typography--headline mdl-typography--font-thin projects-linetrace-subtitle">November 2015<br>Course Project</div>
+        </div>
+        <div class="project-blurb">
+          <div class="mdl-typography--font-thin mdl-typography--headline-color-contrast">Controller design and trajectory generation at three in the morning...</div>
+          <div class="project-blurb-content mdl-typography--body-2-color-contrast mdl-typography--font-thin">
+          Having signed up for the earliest lab schedule, this project had me on MATLAB all night designing a loop-shaping controller and a trajectory pattern of a familiar electric mouse character. Suffice to say, the next morning came and I, with barely a couple of hours of sleep, ended up being the first and only person to show up for the lab schedule that day. The best part of it all? It actually worked and the controller maintained an accuracy of 0.1mm despite not accounting for friction.
+          </div>
+        </div>
+        <div class="projects-elevator-section mdl-typography--text-center">
+          <div class="mdl-typography--font-thin mdl-typography--display-2
+           projects-elevator-title">Concurrent Elevator Algorithm</div>
+          <div class="mdl-typography--headline mdl-typography--font-thin projects-elevator-subtitle">November 2015<br>Course Project</div>
+        </div>
+        <div class="project-blurb">
+          <div class="mdl-typography--font-thin mdl-typography--headline-color-contrast">Several threads, processes, mutexes, rendezvous and semaphores later...</div>
+          <div class="project-blurb-content mdl-typography--body-2-color-contrast mdl-typography--font-thin">
+          Through the use of concurrent programming constructs such as mailboxes, pipelines and data pools, an elevator algorithm was developed. I attempted to make this algorithm as efficient as possible by handling cases such as having the closest elevator respond to an elevator call and having elevators in transit stop at calls going the same direction.
           </div>
         </div>
         <div class="projects-snowbots-section mdl-typography--text-center">
@@ -574,7 +617,7 @@
           </div>
         </div>
         <div class="mdl-typography--font-thin custom-typography--edits">
-            Last modified September 14, 2015
+            Last modified May 6, 2016
         </div>
       </div>
     </div>
