Changed menu colours to match resume

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Page styles -->
     <link href='https://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.grey-indigo.min.css">
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -51,7 +52,7 @@
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="julius-font mdl-layout-title custom-nav-title">
-            ALBERT LAGMAN
+            Albert Lagman
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
@@ -81,8 +82,8 @@
         </div>
       </div>
       <div class="android-drawer mdl-layout__drawer">
-        <span class="android-font mdl-layout-title">
-          <div class="custom-drawer-title">albert.lagman</div>
+        <span class="julius-font mdl-layout-title">
+          <div class="custom-drawer-title">Albert Lagman</div>
         </span>
         <nav class="mdl-navigation">
           <a href="#skills"><span class="mdl-navigation__link">Skills</span></a>
@@ -90,7 +91,6 @@
           <a href="#work"><span class="mdl-navigation__link">Work</span></a>
           <a class="mdl-navigation__link" href="#industry">Industry</a>
           <a class="mdl-navigation__link" href="#volunteer">Volunteer</a>
-          <div class="android-drawer-separator"></div>
           <a href="#projects"><span class="mdl-navigation__link">Projects</span></a>
           <div class="android-drawer-separator"></div>
           <a  href="#academics"><span class="mdl-navigation__link">Academics</span></a>
@@ -104,17 +104,17 @@
       <div class="android-content mdl-layout__content">
         <a id="top"></a>
         <div class="custom-front-section mdl-typography--text-center">
-          <div class="android-font custom-slogan">Albert Lagman</div>
+          <div class="julius-font custom-slogan">Albert Lagman</div>
           <div class="custom-logos">
             <a href="mailto:info@albertlagman.com"><i class="material-icons custom-email-colour">email</i></a>
             <a href="http://www.linkedin.com/in/albertlagman" target="_blank"><img class="custom-icon-colour" src="images/In-White-21px-TM.png"></img></a>
             <a href="http://www.github.com/albertlagman" target="_blank"><img class="custom-icon-colour" src="images/GitHub-Mark-Light-32px.png"></img></a>
           </div>
-          <div class="android-font custom-sub-slogan">Bachelor of Applied Science</div>
-          <div class="android-font custom-sub-slogan">Mechanical Engineering</div>
-          <div class="android-font custom-sub-slogan">Mechatronics Specialization</div>
-          <div class="android-font custom-sub-slogan">Minor in Commerce</div>
-          <div class="android-font custom-sub-slogan">mechatronics. embedded. sensors. HCI </div>
+          <div class="julius-font custom-sub-slogan">Bachelor of Applied Science</div>
+          <div class="julius-font custom-sub-slogan">Mechanical Engineering</div>
+          <div class="julius-font custom-sub-slogan">Mechatronics Specialization</div>
+          <div class="julius-font custom-sub-slogan">Minor in Commerce</div>
+          <div class="julius-font custom-sub-slogan">mechatronics. embedded. sensors. HCI </div>
             <a href="#skills">
               <button class="android-fab custom-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
                 <i class="material-icons">expand_more</i>
