Added youtube links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
     <!-- Page styles -->
     <link href='https://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.grey-indigo.min.css">
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -86,19 +85,20 @@
           <div class="custom-drawer-title">Albert Lagman</div>
         </span>
         <nav class="mdl-navigation">
-          <a href="#skills"><span class="mdl-navigation__link">Skills</span></a>
+          <a href="#skills"><span class="mdl-navigation__link">SKILLS</span></a>
           <div class="android-drawer-separator"></div>  
-          <a href="#work"><span class="mdl-navigation__link">Work</span></a>
+          <a href="#work"><span class="mdl-navigation__link">WORK</span></a>
           <a class="mdl-navigation__link" href="#industry">Industry</a>
           <a class="mdl-navigation__link" href="#volunteer">Volunteer</a>
-          <a href="#projects"><span class="mdl-navigation__link">Projects</span></a>
+          <div class="android-drawer-separator"></div>  
+          <a href="#projects"><span class="mdl-navigation__link">PROJECTS</span></a>
           <div class="android-drawer-separator"></div>
-          <a  href="#academics"><span class="mdl-navigation__link">Academics</span></a>
+          <a  href="#academics"><span class="mdl-navigation__link">ACADEMICS</span></a>
           <a class="mdl-navigation__link" href="#schools">Schools</a>
           <a class="mdl-navigation__link" href="#research">Research</a>
           <a class="mdl-navigation__link" href="#awards">Awards</a>
           <div class="android-drawer-separator"></div>
-          <a href="#interests"><span class="mdl-navigation__link">Interests</span></a>
+          <a href="#interests"><span class="mdl-navigation__link">INTERESTS</span></a>
         </nav>
       </div>
       <div class="android-content mdl-layout__content">
@@ -307,6 +307,7 @@
         </div>
         <div class="project-blurb">
           <div class="mdl-typography--font-thin mdl-typography--headline-color-contrast">Microcontrollers, Motors, GUIs and Project Development on Overdrive</div>
+          <a href="https://www.youtube.com/watch?v=Gfr9DGkmo1A"><div class="mdl-button mdl-js-button mdl-typography--body-2-color-contrast mdl-typography--font-thin projects-video-text mdl-js-ripple-effect"><i class="material-icons">ondemand_video</i> Play Video</div></a>
           <div class="project-blurb-content mdl-typography--body-2-color-contrast mdl-typography--font-thin">
           This project involved writing a project proposal and actually executing it through the use of embedded programming, GUI development, mechanical design and circuit design patterns. By the end of it, the room scanner was capable of scanning objects in a room through a mixture of a line laser, webcam and a stepper motor. I genuinely enjoyed this project for two reasons: its relation to my interests and its similarity to actual industry work. For one, microcontrollers, sensors and programming in general were always very engrossing. Furthermore, my newly acquired computer vision skills at the time reflect the ever present need to learn of an engineer. In such a short time span, my partner and I accomplished so much and had so much fun in the process.
           </div>
@@ -329,6 +330,7 @@
         </div>
         <div class="project-blurb">
           <div class="mdl-typography--font-thin mdl-typography--headline-color-contrast">Controller design and trajectory generation at three in the morning...</div>
+          <a href="https://www.youtube.com/watch?v=fNHNds0cG5M"><div class="mdl-button mdl-js-button mdl-typography--body-2-color-contrast mdl-typography--font-thin projects-video-text mdl-js-ripple-effect"><i class="material-icons">ondemand_video</i> Play Video</div></a>
           <div class="project-blurb-content mdl-typography--body-2-color-contrast mdl-typography--font-thin">
           Having signed up for the earliest lab schedule, this project had me on MATLAB all night designing a loop-shaping controller and a trajectory pattern of a familiar electric mouse character. Suffice to say, the next morning came and I, with barely a couple of hours of sleep, ended up being the first and only person to show up for the lab schedule that day. The best part of it all? It actually worked and the controller maintained an accuracy of 0.1mm despite not accounting for friction.
           </div>
@@ -406,6 +408,7 @@
         </div>
         <div class="project-blurb">
           <div class="mdl-typography--font-thin mdl-typography--headline-color-contrast">A robotics experiment...</div>
+          <a href="https://www.youtube.com/watch?v=9uLcPTaa_aw"><div class="mdl-button mdl-js-button mdl-typography--body-2-color-contrast mdl-typography--font-thin projects-video-text mdl-js-ripple-effect"><i class="material-icons">ondemand_video</i> Play Video</div></a>
           <div class="project-blurb-content mdl-typography--body-2-color-contrast mdl-typography--font-thin">
           This project was a face tracking camera complete with mechanical movements to follow movements of a locked-on target. It involved the use of an Arduino for controlling the two servomotors and a Raspberry Pi for the OpenCV tracking Python script. The bracket attached to the servos was initially made of Papier Mache, but a plastic one was acquired later on.
           </div>
@@ -428,6 +431,7 @@
         </div>
         <div class="project-blurb">
           <div class="mdl-typography--font-thin mdl-typography--headline-color-contrast">The engineering design process...</div>
+          <a href="https://www.youtube.com/watch?v=LltLBxngR_4"><div class="mdl-button mdl-js-button mdl-typography--body-2-color-contrast mdl-typography--font-thin projects-video-text mdl-js-ripple-effect"><i class="material-icons">ondemand_video</i> Play Video</div></a>
           <div class="project-blurb-content mdl-typography--body-2-color-contrast mdl-typography--font-thin">
           A prototype amphibious hovercraft was built by a team of seven with the use of lightweight materials, 3D printing, propellers and DC motors. By utilizing a methodological engineering design process paired with the creation of several physical and analytical prototypes, the team managed to complete five courses that consisted of maneuvering, speed and weight carrying. The design was then presented in the form of a report and presentation.
           </div>
