Fixed mobile padding bug

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               </button>
             </a>
         </div>
-        <div class="android-more-section">
+        <div class="android-more-section custom-skills-padding">
           <a id="skills"></a>
           <div class="android-section-title mdl-typography--display-2-color-contrast mdl-typography--font-thin">Skills</div>
           <div class="android-card-container mdl-grid">
