Clicking my name goes to top

--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
-          <span class="julius-font mdl-layout-title custom-nav-title">
-            Albert Lagman
-          </span>
+          <a href="#top">
+            <span class="julius-font mdl-layout-title custom-nav-title">
+              Albert Lagman
+            </span>
+          </a>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
           <!-- Navigation -->
